WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181959
REGRESSION (
r227011
): fast/frames/hidpi-position-iframe-on-device-pixel.html times out
https://bugs.webkit.org/show_bug.cgi?id=181959
Summary
REGRESSION (r227011): fast/frames/hidpi-position-iframe-on-device-pixel.html ...
Simon Fraser (smfr)
Reported
2018-01-22 15:10:46 PST
REGRESSION (
r227011
): fast/frames/hidpi-position-iframe-on-device-pixel.html times out
Attachments
Patch
(2.29 KB, patch)
2018-01-22 15:12 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-01-22 15:12:53 PST
Created
attachment 331969
[details]
Patch
WebKit Commit Bot
Comment 2
2018-01-22 18:00:19 PST
Comment on
attachment 331969
[details]
Patch Clearing flags on attachment: 331969 Committed
r227379
: <
https://trac.webkit.org/changeset/227379
>
WebKit Commit Bot
Comment 3
2018-01-22 18:00:20 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-22 18:01:45 PST
<
rdar://problem/36757985
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug