REGRESSION (r227011): fast/frames/hidpi-position-iframe-on-device-pixel.html times out https://bugs.webkit.org/show_bug.cgi?id=181959

Reviewed by Zalan Bujtas.

This test creates 300 iframes, which became slow after r227011 because they all became part
of the non-fast scrollable region, slowing down ScrollingCoordinator::absoluteEventTrackingRegionsForFrame().

Fix by not adding non-scrollable iframes, and making FrameView::isScrollable() more efficient for frames
that have not done layout yet.

* page/FrameView.cpp:
(WebCore::FrameView::isScrollable):
(WebCore::FrameView::addChild):


Canonical link: https://commits.webkit.org/197799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227379 268f45cc-cd09-0410-ab3c-d52691b4dbfc